@@ -2,13 +2,13 @@
 <extension version="3" type="library" method="upgrade">
   <name>j2xml</name>
   <libraryname>eshiol/j2xml</libraryname>
-  <creationDate>October 2017</creationDate>
+  <creationDate>April 2018</creationDate>
   <author>Helios Ciancio</author>
   <authorEmail>info@eshiol.it</authorEmail>
   <authorUrl>www.eshiol.it</authorUrl>
-  <copyright>(C) 2010, 2017 Helios Ciancio. All rights reserved.</copyright>
+  <copyright>(C) 2010, 2018 Helios Ciancio. All rights reserved.</copyright>
   <license>GNU/GPL v3</license>
-  <version>17.10.305.699</version>
+  <version>18.4.306.704</version>
   <description>LIB_J2XML_XML_DESCRIPTION</description>
   <packagerurl>http://www.eshiol.it</packagerurl>
   <files>
