@@ -1,3 +1,8 @@
+----------------------- 18.4.306 Release [3-April-2018] -----------------------
+
+3-April-2018
+  # fields (build 306)
+
 --------------------- 17.10.305 Release [11-October-2017] ---------------------
 
 11-October-2017
